# healthplus

./: README.md
healthcare_backend/: pom.xml
healthcare_backend/src/main/resources/: banner.txt  (+1 more)
healthcare_function/: .dockerignore  Dockerfile  README.md  app.py  blueprint.py  container.py  docker-compose.yml  gunicorn_config.py  pyproject.toml  test.py  wsgi.py
healthcare_function/app/assets/form_template/: benhan.html  phieu_dieu_tri.html  tomtat_benhan.html
healthcare_function/app/config/: static_config.py
healthcare_function/app/config/env/: dev.ini  prod.ini
healthcare_function/app/config/mongodb/: mongodb_client.py
healthcare_function/app/config/s3/: s3_client.py
healthcare_function/app/controller/: common_controller.py
healthcare_function/app/generate_protocol/: generated_protocol.py  template.html  variable_template.html
healthcare_function/app/repository/: common_repository.py  user_repository.py
healthcare_function/app/service/: common_service.py
healthcare_mobile/: README.md  pubspec.yaml
healthcare_mobile/android/app/: build.gradle.kts
healthcare_mobile/ios/Runner/: Info.plist
healthcare_mobile/ios/Runner.xcodeproj/: project.pbxproj
healthcare_mobile/linux/: CMakeLists.txt
healthcare_mobile/linux/runner/: my_application.cc
healthcare_mobile/macos/Runner.xcodeproj/: project.pbxproj
healthcare_mobile/test/: widget_test.dart
healthcare_mobile/web/: index.html  manifest.json
healthcare_mobile/windows/: CMakeLists.txt
healthcare_mobile/windows/runner/: Runner.rc  main.cpp
healthcare_web/: package-lock.json  package.json
(+50 files in other folders)
