[project]
name = "py-ekyc-service"
version = "0.1.0"
description = ""
authors = [
    { name = "Louis Pham", email = "louis.phammm@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pendulum (>=3.1.0,<4.0.0)",
    "dependency-injector (>=4.47.1,<5.0.0)",
    "pymongo (>=4.13.0,<5.0.0)",
    "boto3 (>=1.38.32,<2.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "typing-extensions (>=4.14.0,<5.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "gevent (>=25.5.1,<26.0.0)",
]

[tool.poetry]
readme = "README.md"
packages = [{ include = "ekyc"}]

[tool.poetry.scripts]
ekyc = "app:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
